test/pass/lambdas/lambda_workout.lly
define f(lsi: List[Integer]) {

}

f(
    [1,
     (|| 2)(),
     (|| [3])()[0],
     (|| [[4]] )
                 ()
                     [
                         (|| 0 )()
                     ]
                     [
                         (|| 0 )()
                     ],
     (|| (|| 5 )) () (),
     [(|| 6)() , (|| 7)(), (|| 8)()] [0]
    ]
)
